--- a/package.json
+++ b/package.json
@@ -95,6 +95,7 @@
   },
   "dependencies": {
     "@types/glob": "^7.2.0",
+    "esbuild-darwin-64": "^0.14.39",
     "fs": "^0.0.1-security",
     "glob": "^7.2.0",
     "strip-json-comments": "^4.0.0",
